tests/compile_failures/combine_too_big.rs
use splitbits::*;

fn main() {
    let a: u16 = 0b1010_0101_0000_1111;
    combinebits!("aaaa aaaa");
}
